--- a/Controls/DataBrowser/DataBrowserControl.xaml
+++ b/Controls/DataBrowser/DataBrowserControl.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="CustomControls.CustomControls.Controls.DataBrowser.DataBrowser"
+﻿<UserControl x:Class="SHCustoms.Controls.DataBrowser.DataBrowserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:CustomControls.CustomControls.Controls.DataBrowser"
+             xmlns:local="clr-namespace:SHCustoms.Controls.DataBrowser"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:util="clr-namespace:SHCustoms.Utilities"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              Background="{DynamicResource MaterialDesignPaper}" TextElement.FontWeight="Medium"
              TextElement.FontSize="14" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
@@ -12,6 +13,9 @@
         <ListView>
             <ListView.View>
                 <GridView>
+                    <GridViewColumn Header="Make" DisplayMemberBinding="{Binding Make}" />
+                    <GridViewColumn Header="Model" DisplayMemberBinding="{Binding Model}" />
+                    <GridViewColumn Header="Year" DisplayMemberBinding="{Binding Year}" />
                 </GridView>
             </ListView.View>
         </ListView>
