--- a/Controls/DataBrowser/DataBrowserControl.xaml
+++ b/Controls/DataBrowser/DataBrowserControl.xaml
@@ -8,9 +8,9 @@
              xmlns:util="clr-namespace:SHCustoms.Utilities"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              Background="{DynamicResource MaterialDesignPaper}" TextElement.FontWeight="Medium"
-             TextElement.FontSize="14" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
+             TextElement.FontSize="14" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800" Name="root">
     <Grid>
-        <ListView>
+        <ListView Name="list" ItemsSource="{Binding ItemSource, ElementName=root}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Make" DisplayMemberBinding="{Binding Make}" />
