--- a/Controls/DataBrowser/DataBrowserControl.xaml
+++ b/Controls/DataBrowser/DataBrowserControl.xaml
@@ -9,13 +9,12 @@
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              Background="{DynamicResource MaterialDesignPaper}" TextElement.FontWeight="Medium"
              TextElement.FontSize="14" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800" Name="root">
+    <UserControl.Resources>
+    </UserControl.Resources>
     <Grid>
         <ListView Name="list" ItemsSource="{Binding ItemSource, ElementName=root}" IsSynchronizedWithCurrentItem="True"
-                  util:GridViewSort.AutoSort="True" MouseDoubleClick="List_MouseDoubleClick" SelectedItem="{Binding SelectedItem, ElementName=root, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
-            <ListView.Resources>
-                <Style TargetType="GridViewColumnHeader">
-                </Style>
-            </ListView.Resources>
+                  util:GridViewSort.AutoSort="True" MouseDoubleClick="List_MouseDoubleClick"
+                  SelectedItem="{Binding SelectedItem, ElementName=root, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
             <ListView.View>
                 <GridView>
                 </GridView>
